--- a/package.json
+++ b/package.json
@@ -1,94 +1,283 @@
 {
-  "name": "city-of-marion",
-  "version": "2.1.0",
-  "description": "City of Marion Craft CMS site",
-  "author": "Mike Stecker <mike@stecker.me>",
-  "private": true,
-  "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
-  },
-  "dependencies": {
-    "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^1.1.3",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
-    "eslint": "^3.19.0",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^2.0.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "cross-env": "^4.0.0",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.30",
-    "karma-webpack": "^2.0.2",
-    "lolex": "^1.5.2",
-    "mocha": "^3.2.0",
-    "chai": "^3.5.0",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.8.0",
-    "inject-loader": "^3.0.0",
-    "babel-plugin-istanbul": "^4.1.1",
-    "phantomjs-prebuilt": "^2.1.14",
-    "chromedriver": "^2.27.2",
-    "cross-spawn": "^5.0.1",
-    "nightwatch": "^0.9.12",
-    "selenium-server": "^3.0.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.2.0",
-    "rimraf": "^2.6.0",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^12.1.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "name": "city-of-marion",
+    "version": "2.1.0",
+    "description": "City of Marion Craft CMS site",
+    "main": "gulpfile.js",
+    "author": "Mike Stecker <mike@stecker.me>",
+    "copyright": "mikestecker",
+    "license": "UNLICENSED",
+    "private": true,
+    "paths": {
+        "src": {
+            "base": "./src/",
+            "fontello": "./src/fontello/",
+            "fonts": "./src/fonts/",
+            "json": "./src/json/",
+            "js": "./src/js/",
+            "img": "./src/img/",
+            "styles": "./src/styles/"
+        },
+        "dist": {
+            "base": "./web/",
+            "css": "./web/assets/css/",
+            "js": "./web/assets/js/",
+            "fonts": "./web/assets/fonts/",
+            "img": "./web/assets/img/"
+        },
+        "build": {
+            "base": "./generated/",
+            "css": "./generated/css/",
+            "fontello": "./generated/fonts/fontello/",
+            "fonts": "./generated/fonts/",
+            "js": "./generated/js/",
+            "html": "./generated/html/",
+            "img": "./generated/img/"
+        },
+        "favicon": {
+            "src": "./src/img/favicon_src.png",
+            "dest": "./public/img/site/",
+            "path": "/img/site/"
+        },
+        "scss": [],
+        "templates": "./templates/"
+    },
+    "domains": {
+        "live": "cityofmarion.in.gov",
+        "local": "cityofmarion.in.dev",
+        "critical": "cityofmarion.in.gov"
+    },
+    "urls": {
+        "live": "https://cityofmarion.in.gov/",
+        "local": "https://cityofmarion.in.dev/",
+        "critical": "https://cityofmarion.in.gov/"
+    },
+    "vars": {
+        "siteCssName": "site.combined.min.css",
+        "styleName": "master.styl",
+        "cssName": "style.css"
+    },
+    "globs": {
+        "distCss": [
+            "./node_modules/normalize.css/normalize.css",
+            "./node_modules/flexboxgrid/dist/flexboxgrid.min.css",
+            "./src/css/prism-theme.css",
+            "./build/fonts/fontello/css/fontello-codes.css",
+            "./build/css/*.css",
+            "./src/css/*.css"
+        ],
+        "img": [
+            "./public/img/"
+        ],
+        "components": [
+            "./src/components/**/*.vue"
+        ],
+        "fonts": [
+            "./build/fonts/fontello/font/*.{eot,ttf,woff,woff2}",
+            "./src/fonts/*.{eot,ttf,woff,woff2}"
+        ],
+        "critical": [
+            {
+                "url": "",
+                "template": "index"
+            },
+            {
+                "url": "blog/stop-using-htaccess-files-no-really",
+                "template": "blog/_entry"
+            },
+            {
+                "url": "blog/stop-using-htaccess-files-no-really",
+                "template": "blog/_amp_entry"
+            },
+            {
+                "url": "blog",
+                "template": "blog/index"
+            },
+            {
+                "url": "blog",
+                "template": "blog/amp_index"
+            },
+            {
+                "url": "wordpress",
+                "template": "wordpress"
+            },
+            {
+                "url": "404",
+                "template": "404"
+            }
+        ],
+        "distJs": [
+            "./build/js/*.js",
+            "./node_modules/lazysizes/lazysizes.min.js",
+            "./node_modules/lazysizes/plugins/bgset/ls.bgset.min.js",
+            "./node_modules/picturefill/dist/picturefill.min.js",
+            "./node_modules/vue/dist/vue.min.js",
+            "./node_modules/vue-resource/dist/vue-resource.min.js"
+        ],
+        "prismJs": [
+            "./node_modules/prismjs/prism.js",
+            "./node_modules/prismjs/components/prism-markup.js",
+            "./node_modules/prismjs/components/prism-apacheconf.js",
+            "./node_modules/prismjs/components/prism-css.js",
+            "./node_modules/prismjs/components/prism-json.js",
+            "./node_modules/prismjs/components/prism-twig.js",
+            "./node_modules/prismjs/components/prism-php.js",
+            "./node_modules/prismjs/components/prism-bash.js",
+            "./node_modules/prismjs/components/prism-javascript.js",
+            "./node_modules/prismjs/plugins/line-numbers/prism-line-numbers.min.js"
+        ],
+        "systemJs": [
+            "./node_modules/systemjs/dist/system-polyfills.js",
+            "./node_modules/systemjs/dist/system.js",
+            "./src/js/system-config.js"
+        ],
+        "babelJs": [
+            "./src/js/*.js"
+        ],
+        "inlineJs": [
+            "./node_modules/fg-loadcss/src/loadCSS.js",
+            "./node_modules/fg-loadcss/src/cssrelpreload.js",
+            "./node_modules/fontfaceobserver/fontfaceobserver.js",
+            "./src/js/asyncload-blog-fonts.js",
+            "./src/js/asyncload-site-fonts.js"
+        ],
+        "siteIcon": "./public/img/site/favicon.*"
+    },
+    "dependencies": {
+        "fg-loadcss": "^1.3.1",
+        "flexboxgrid": "^6.3.1",
+        "fontfaceobserver": "^2.0.13",
+        "lazysizes": "^4.0.0-rc3",
+        "normalize.css": "^7.0.0",
+        "picturefill": "^3.0.2",
+        "prismjs": "^1.6.0",
+        "systemjs": "^0.20.14",
+        "vue": "^2.3.3",
+        "vue-resource": "^1.3.4",
+        "vue-router": "^2.3.1"
+    },
+    "devDependencies": {
+        "babel-core": "^6.22.1",
+        "babel-eslint": "^7.1.1",
+        "babel-loader": "^6.2.10",
+        "babel-plugin-istanbul": "^4.1.1",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-preset-env": "^1.3.2",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-2": "^6.22.0",
+        "babel-register": "^6.22.0",
+        "browser-sync": "^2.18.12",
+        "chai": "^3.5.0",
+        "chalk": "^1.1.3",
+        "chromedriver": "^2.27.2",
+        "connect-history-api-fallback": "^1.3.0",
+        "copy-webpack-plugin": "^4.0.1",
+        "critical": "^0.8.4",
+        "cross-env": "^4.0.0",
+        "cross-spawn": "^5.0.1",
+        "css-loader": "^0.28.0",
+        "css-mqpacker": "^6.0.1",
+        "cssnano": "^3.10.0",
+        "del": "^3.0.0",
+        "eslint": "^3.19.0",
+        "eslint-config-standard": "^6.2.1",
+        "eslint-friendly-formatter": "^2.0.7",
+        "eslint-loader": "^1.7.1",
+        "eslint-plugin-html": "^2.0.0",
+        "eslint-plugin-promise": "^3.4.0",
+        "eslint-plugin-standard": "^2.0.1",
+        "eventsource-polyfill": "^0.9.6",
+        "express": "^4.14.1",
+        "extract-text-webpack-plugin": "^2.0.0",
+        "fancy-log": "^1.3.0",
+        "file-loader": "^0.11.1",
+        "friendly-errors-webpack-plugin": "^1.1.3",
+        "git-rev-sync": "^1.9.1",
+        "gulp": "^3.9.1",
+        "gulp-babel": "^6.1.2",
+        "gulp-cached": "^1.1.1",
+        "gulp-concat": "^2.6.1",
+        "gulp-copy": "^1.0.0",
+        "gulp-debug": "^3.1.0",
+        "gulp-favicons": "^2.2.7",
+        "gulp-fontello": "^0.4.6",
+        "gulp-header": "^1.8.8",
+        "gulp-if": "^2.0.2",
+        "gulp-ignore": "^2.0.2",
+        "gulp-imagemin": "^3.3.0",
+        "gulp-load-plugins": "^1.5.0",
+        "gulp-newer": "^1.3.0",
+        "gulp-plumber": "^1.1.0",
+        "gulp-postcss": "^7.0.0",
+        "gulp-print": "^2.0.1",
+        "gulp-rename": "^1.2.2",
+        "gulp-replace": "^0.6.1",
+        "gulp-rev": "^7.1.2",
+        "gulp-sass": "^3.1.0",
+        "gulp-size": "^2.1.0",
+        "gulp-sourcemaps": "^2.6.0",
+        "gulp-stylus": "^2.6.0",
+        "gulp-uglify": "^3.0.0",
+        "html-webpack-plugin": "^2.28.0",
+        "http-proxy-middleware": "^0.17.3",
+        "inject-loader": "^3.0.0",
+        "jeet": "^7.1.0",
+        "karma": "^1.4.1",
+        "karma-coverage": "^1.1.1",
+        "karma-mocha": "^1.3.0",
+        "karma-phantomjs-launcher": "^1.0.2",
+        "karma-phantomjs-shim": "^1.4.0",
+        "karma-sinon-chai": "^1.3.1",
+        "karma-sourcemap-loader": "^0.3.7",
+        "karma-spec-reporter": "0.0.30",
+        "karma-webpack": "^2.0.2",
+        "lolex": "^1.5.2",
+        "mocha": "^3.2.0",
+        "moment": "^2.18.1",
+        "nib": "^1.1.2",
+        "nightwatch": "^0.9.12",
+        "opn": "^4.0.2",
+        "optimize-css-assets-webpack-plugin": "^1.3.0",
+        "ora": "^1.2.0",
+        "phantomjs-prebuilt": "^2.1.14",
+        "postcss-brand-colors": "^1.0.0",
+        "postcss-cssnext": "^3.0.2",
+        "poststylus": "^0.2.3",
+        "rimraf": "^2.6.0",
+        "rupture": "^0.6.2",
+        "selenium-server": "^3.0.1",
+        "semver": "^5.3.0",
+        "shelljs": "^0.7.6",
+        "sinon": "^2.1.0",
+        "sinon-chai": "^2.8.0",
+        "url-loader": "^0.5.8",
+        "vue-loader": "^12.1.0",
+        "vue-style-loader": "^3.0.1",
+        "vue-template-compiler": "^2.3.3",
+        "webpack": "^2.6.1",
+        "webpack-bundle-analyzer": "^2.2.1",
+        "webpack-dev-middleware": "^1.10.0",
+        "webpack-hot-middleware": "^2.18.0",
+        "webpack-merge": "^4.1.0",
+        "webpack-stream": "^3.2.0"
+    },
+    "scripts": {
+        "start": "gulp",
+        "build": "gulp build"
+    },
+    "engines": {
+        "node": ">= 4.0.0",
+        "npm": ">= 3.0.0"
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:mikestecker/city-of-marion.git"
+    },
+    "bugs": {
+        "email": "mike@stecker.me"
+    }
 }
