--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
             "json": "./src/json/",
             "js": "./src/js/",
             "img": "./src/img/",
+            "sprites": "./src/sprites/",
             "styles": "./src/styles/"
         },
         "dist": {
@@ -31,7 +32,8 @@
             "fonts": "./generated/fonts/",
             "js": "./generated/js/",
             "html": "./generated/html/",
-            "img": "./generated/img/"
+            "img": "./generated/img/",
+            "sprites": "./generated/sprites/"
         },
         "favicon": {
             "src": "./src/img/favicon_src.png",
@@ -216,6 +218,7 @@
         "gulp-size": "^2.1.0",
         "gulp-sourcemaps": "^2.6.0",
         "gulp-stylus": "^2.6.0",
+        "gulp-svg-sprite": "^1.3.7",
         "gulp-uglify": "^3.0.0",
         "html-webpack-plugin": "^2.28.0",
         "http-proxy-middleware": "^0.17.3",
