--- a/package.json
+++ b/package.json
@@ -247,6 +247,7 @@
         "poststylus": "^0.2.3",
         "rimraf": "^2.6.0",
         "rupture": "^0.6.2",
+        "s-grid": "^1.2.0",
         "selenium-server": "^3.0.1",
         "semver": "^5.3.0",
         "shelljs": "^0.7.6",
