--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "globs": {
         "distCss": [
             "./node_modules/normalize.css/normalize.css",
-            "./node_modules/flexboxgrid/dist/flexboxgrid.min.css",
             "./src/css/prism-theme.css",
             "./build/fonts/fontello/css/fontello-codes.css",
             "./build/css/*.css",
@@ -146,7 +145,6 @@
     },
     "dependencies": {
         "fg-loadcss": "^1.3.1",
-        "flexboxgrid": "^6.3.1",
         "fontfaceobserver": "^2.0.13",
         "lazysizes": "^4.0.0-rc3",
         "normalize.css": "^7.0.0",
@@ -234,6 +232,7 @@
         "karma-spec-reporter": "0.0.30",
         "karma-webpack": "^2.0.2",
         "lolex": "^1.5.2",
+        "lost": "^8.2.0",
         "mocha": "^3.2.0",
         "moment": "^2.18.1",
         "nib": "^1.1.2",
@@ -247,7 +246,6 @@
         "poststylus": "^0.2.3",
         "rimraf": "^2.6.0",
         "rupture": "^0.6.2",
-        "s-grid": "^1.2.0",
         "selenium-server": "^3.0.1",
         "semver": "^5.3.0",
         "shelljs": "^0.7.6",
