--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
             "./node_modules/lazysizes/lazysizes.min.js",
             "./node_modules/lazysizes/plugins/bgset/ls.bgset.min.js",
             "./node_modules/picturefill/dist/picturefill.min.js",
+            "./node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.js",
             "./node_modules/vue/dist/vue.min.js",
             "./node_modules/vue-resource/dist/vue-resource.min.js"
         ],
@@ -144,6 +145,7 @@
         "siteIcon": "./public/img/site/favicon.*"
     },
     "dependencies": {
+        "@fancyapps/fancybox": "^3.1.20",
         "fg-loadcss": "^1.3.1",
         "fontfaceobserver": "^2.0.13",
         "lazysizes": "^4.0.0-rc3",
