--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "dependencies": {
         "@fancyapps/fancybox": "^3.1.20",
         "fg-loadcss": "^1.3.1",
+        "font-awesome-stylus": "^4.7.1",
         "fontfaceobserver": "^2.0.13",
         "lazysizes": "^4.0.0-rc3",
         "normalize.css": "^7.0.0",
