--- a/NginxSampleConfiguration.conf
+++ b/NginxSampleConfiguration.conf
@@ -39,6 +39,18 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    location @assetversioning {
+        rewrite ^(.+)\.[0-9]+\.(css|js)$ $1.$2 last;  # /assets/build/js/scripts.1399647655.js
+        # rewrite ^(.+)/([0-9]+)/(.+)\.(js|css)$ $1/$3.$4 last;  # /assets/build/js/1399647655/scripts.js
+    }
+
+    location ~* ^/assets/.*\.(?:css|js)$ {
+        try_files $uri @assetversioning;
+        expires max;
+        add_header Pragma public;
+        add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+    }
+
     # Craft-specific location handlers to ensure AdminCP requests route through index.php
     # If you change your `cpTrigger`, change it here as well
     location ^~ /admin {
