--- a/composer.json
+++ b/composer.json
@@ -49,8 +49,10 @@
         "nystudio107/craft3-transcoder": "^1.0",
         "dolphiq/titleentriesfield": "^1.0",
         "luwes/craft3-inline": "^1.0",
-        "mikestecker/craft3-inlin": "^1.2.0",
-        "mikestecker/craft3-videoembedder": "^1.0.0"
+        "mikestecker/craft3-videoembedder": "^1.0",
+        "craftcms/store-hours": "^2.0",
+        "aelvan/inlin": "^2.0",
+        "aelvan/stamp": "^2.0"
     },
     "require-dev": {
         "heroku/heroku-buildpack-php": "^83.0"
@@ -66,7 +68,7 @@
     "repositories": [
       {
         "type": "path",
-        "url": "../../../other/craft3-videoembedder/"
+        "url": "../../../other/craft3-inlin/"
       }
     ]
 }
