--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,6 +1,11 @@
 <IfModule mod_rewrite.c>
 	RewriteEngine On
 
+  # Rewrites asset versioning, ie styles.1399647655.css to styles.css.
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteRule ^(.+)\.(\d{10})\.(js|css)$ $1.$3 [L]  # /assets/build/js/scripts.1399647655.js
+  # RewriteRule ^(.+)/(\d{10})/(.+)\.(js|css)$ $1/$3.$4 [L]  # /assets/build/js/1399647655/scripts.js
+
 	# Send would-be 404 requests to Craft
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
