--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
             "./node_modules/lazysizes/plugins/bgset/ls.bgset.min.js",
             "./node_modules/picturefill/dist/picturefill.min.js",
             "./node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.js",
+            "./node_modules/choices.js/assets/scripts/dist/choices.min.js",
             "./node_modules/vue/dist/vue.min.js",
             "./node_modules/vue-resource/dist/vue-resource.min.js"
         ],
@@ -146,6 +147,7 @@
     },
     "dependencies": {
         "@fancyapps/fancybox": "^3.1.20",
+        "choices.js": "^3.0.2",
         "fg-loadcss": "^1.3.1",
         "font-awesome-stylus": "^4.7.1",
         "fontfaceobserver": "^2.0.13",
