--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
             "./node_modules/picturefill/dist/picturefill.min.js",
             "./node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.js",
             "./node_modules/choices.js/assets/scripts/dist/choices.min.js",
+            "./node_modules/autosize/dist/autosize.min.js",
             "./node_modules/vue/dist/vue.min.js",
             "./node_modules/vue-resource/dist/vue-resource.min.js"
         ],
@@ -147,6 +148,7 @@
     },
     "dependencies": {
         "@fancyapps/fancybox": "^3.1.20",
+        "autosize": "^4.0.0",
         "choices.js": "^3.0.2",
         "fg-loadcss": "^1.3.1",
         "font-awesome-stylus": "^4.7.1",
