--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,9 @@
         "aelvan/stamp": "^2.0",
         "mblode/svgplaceholder": "^1.0",
         "dukt/videos": "^2.0@beta"
+        "dukt/videos": "^2.0@beta",
+        "craftcms/contact-form": "^2.0",
+        "craftcms/contact-form-honeypot": "^1.0"
     },
     "require-dev": {
         "heroku/heroku-buildpack-php": "^83.0"
