--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
         "dukt/videos": "^2.0@beta"
         "dukt/videos": "^2.0@beta",
         "craftcms/contact-form": "^2.0",
-        "craftcms/contact-form-honeypot": "^1.0"
+        "craftcms/contact-form-honeypot": "^1.0",
+        "dukt/social": "~2.0"
     },
     "require-dev": {
         "heroku/heroku-buildpack-php": "^83.0"
