article tweaks, share sheet, related entries

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
             "./node_modules/lazysizes/lazysizes.min.js",
             "./node_modules/lazysizes/plugins/bgset/ls.bgset.min.js",
             "./node_modules/picturefill/dist/picturefill.min.js",
+            "./node_modules/responsive-social-buttons/dist/social-buttons.js",
             "./node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.js",
             "./node_modules/choices.js/assets/scripts/dist/choices.min.js",
             "./node_modules/autosize/dist/autosize.min.js",
@@ -157,6 +158,7 @@
         "normalize.css": "^7.0.0",
         "picturefill": "^3.0.2",
         "prismjs": "^1.8.1",
+        "responsive-social-buttons": "^1.0.7",
         "systemjs": "^0.20.18",
         "vue": "^2.4.4",
         "vue-resource": "^1.3.4",
