--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,8 @@
         "dukt/videos": "^2.0@beta",
         "craftcms/contact-form": "^2.0",
         "craftcms/contact-form-honeypot": "^1.0",
-        "dukt/social": "~2.0"
+        "dukt/social": "~2.0",
+        "nystudio107/craft3-typogrify": "^1.0"
     },
     "require-dev": {
         "heroku/heroku-buildpack-php": "^83.0"
