--- a/composer.json
+++ b/composer.json
@@ -21,51 +21,52 @@
     "minimum-stability": "beta",
     "require": {
         "php": ">=7.0.0",
-        "craftcms/cms": "^3.0.0-beta.20",
-        "craftcms/plugin-installer": "^1.0.0",
-        "vlucas/phpdotenv": "^2.4.0",
-        "roave/security-advisories": "dev-master",
-        "craftcms/aws-s3": "^1.0",
-        "craftcms/anchors": "^2.0",
-        "nystudio107/craft3-cookies": "^1.1",
-        "misterbk/mix": "^1.1",
-        "nystudio107/craft3-imageoptimize": "^1.2",
-        "craftcms/mailgun": "1.0.0.1",
-        "nystudio107/craft3-minify": "^1.2",
-        "newism/craft3-fields": "0.0.4",
-        "selvinortiz/patrol": "^3.0",
-        "craftcms/query": "^2.0",
-        "nystudio107/craft3-richvariables": "^1.0",
-        "dukt/twitter": "~2.0",
-        "dukt/facebook": "~2.0",
-        "ext-mbstring": "^7.0",
         "ext-imagick": "^3.4",
+        "ext-mbstring": "^7.0",
         "ext-mcrypt": "^7.0",
-        "craftcms/element-api": "^2.4",
-        "craftcms/simple-text": "^2.0",
-        "craftcms/hexdec": "^2.0",
-        "nystudio107/craft3-fastcgicachebust": "^1.0",
-        "nystudio107/craft3-pathtools": "^1.0",
-        "nystudio107/craft3-transcoder": "^1.0",
-        "dolphiq/titleentriesfield": "^1.0",
-        "luwes/craft3-inline": "^1.0",
-        "mikestecker/craft3-videoembedder": "^1.0",
-        "craftcms/store-hours": "^2.0",
         "aelvan/inlin": "^2.0",
         "aelvan/stamp": "^2.0",
-        "mblode/svgplaceholder": "^1.0",
-        "dukt/videos": "^2.0@beta"
-        "dukt/videos": "^2.0@beta",
+        "craftcms/anchors": "^2.0",
+        "craftcms/aws-s3": "^1.0",
+        "craftcms/cms": "^3.0.0-beta.23",
         "craftcms/contact-form": "^2.0",
         "craftcms/contact-form-honeypot": "^1.0",
+        "craftcms/element-api": "^2.4",
+        "craftcms/hexdec": "^2.0",
+        "craftcms/mailgun": "1.0.0.1",
+        "craftcms/plugin-installer": "^1.0.0",
+        "craftcms/query": "^2.0",
+        "craftcms/simple-text": "^2.0",
+        "craftcms/store-hours": "^2.0",
+        "dolphiq/titleentriesfield": "^1.0",
+        "dukt/facebook": "~2.0",
         "dukt/social": "~2.0",
-        "nystudio107/craft3-typogrify": "^1.0"
+        "dukt/twitter": "~2.0",
+        "dukt/videos": "^2.0@beta",
+        "mblode/svgplaceholder": "^1.0",
+        "mexitek/phpcolors": "dev-master",
+        "mikestecker/craft3-videoembedder": "^1.0",
+        "misterbk/mix": "^1.1",
+        "newism/craft3-fields": "0.0.4",
+        "nystudio107/craft3-cookies": "^1.1",
+        "nystudio107/craft3-fastcgicachebust": "^1.0",
+        "nystudio107/craft3-imageoptimize": "^1.2",
+        "nystudio107/craft3-minify": "^1.2",
+        "nystudio107/craft3-pathtools": "^1.0",
+        "nystudio107/craft3-richvariables": "^1.0",
+        "nystudio107/craft3-typogrify": "^1.0",
+        "roave/security-advisories": "dev-master",
+        "selvinortiz/patrol": "^3.0",
+        "verbb/cp-nav": "^2.0",
+        "verbb/expanded-singles": "^1.0",
+        "vlucas/phpdotenv": "^2.4.0"
     },
     "require-dev": {
         "heroku/heroku-buildpack-php": "^83.0"
     },
     "config": {
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "sort-packages": true
     },
     "scripts": {
         "post-root-package-install": [
@@ -76,6 +77,11 @@
       {
         "type": "path",
         "url": "../../../other/craft3-inlin/"
+      },
+      {
+        "type": "path",
+        "url": "../../../other/craft3-encodeemail/"
+      },
       }
     ]
 }
