--- a/package.json
+++ b/package.json
@@ -148,56 +148,56 @@
         "siteIcon": "./public/img/site/favicon.*"
     },
     "dependencies": {
-        "@fancyapps/fancybox": "^3.1.20",
+        "@fancyapps/fancybox": "^3.2.0",
         "autosize": "^4.0.0",
         "choices.js": "^3.0.2",
         "fg-loadcss": "^1.3.1",
         "font-awesome-stylus": "^4.7.1",
         "fontfaceobserver": "^2.0.13",
-        "lazysizes": "^4.0.0-rc3",
+        "lazysizes": "^4.0.1",
         "normalize.css": "^7.0.0",
         "picturefill": "^3.0.2",
-        "prismjs": "^1.8.1",
+        "prismjs": "^1.8.4",
         "responsive-social-buttons": "^1.0.7",
-        "systemjs": "^0.20.18",
-        "vue": "^2.4.4",
+        "systemjs": "^0.20.19",
+        "vue": "^2.5.3",
         "vue-resource": "^1.3.4",
-        "vue-router": "^2.3.1"
+        "vue-router": "^2.8.1"
     },
     "devDependencies": {
         "babel-core": "^6.26.0",
-        "babel-eslint": "^8.0.0",
+        "babel-eslint": "^8.0.2",
         "babel-loader": "^7.1.2",
         "babel-plugin-istanbul": "^4.1.5",
         "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-env": "^1.3.2",
+        "babel-preset-env": "^1.6.1",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-stage-2": "^6.22.0",
         "babel-register": "^6.26.0",
         "browser-sync": "^2.18.13",
         "chai": "^4.1.2",
-        "chalk": "^2.1.0",
-        "chromedriver": "^2.32.3",
-        "connect-history-api-fallback": "^1.3.0",
-        "copy-webpack-plugin": "^4.0.1",
+        "chalk": "^2.3.0",
+        "chromedriver": "^2.33.2",
+        "connect-history-api-fallback": "^1.4.0",
+        "copy-webpack-plugin": "^4.2.0",
         "critical": "^0.9.1",
-        "cross-env": "^5.0.5",
+        "cross-env": "^5.1.1",
         "cross-spawn": "^5.0.1",
         "css-loader": "^0.28.7",
         "css-mqpacker": "^6.0.1",
         "cssnano": "^3.10.0",
         "csso-stylus": "0.0.3",
         "del": "^3.0.0",
-        "eslint": "^4.7.0",
+        "eslint": "^4.10.0",
         "eslint-config-standard": "^10.2.1",
         "eslint-friendly-formatter": "^3.0.0",
         "eslint-loader": "^1.7.1",
         "eslint-plugin-html": "^3.2.2",
-        "eslint-plugin-promise": "^3.4.0",
+        "eslint-plugin-promise": "^3.6.0",
         "eslint-plugin-standard": "^3.0.1",
         "eventsource-polyfill": "^0.9.6",
-        "express": "^4.15.4",
-        "extract-text-webpack-plugin": "^3.0.0",
+        "express": "^4.16.2",
+        "extract-text-webpack-plugin": "^3.0.2",
         "fancy-log": "^1.3.0",
         "file-loader": "^0.11.1",
         "friendly-errors-webpack-plugin": "^1.1.3",
@@ -213,7 +213,7 @@
         "gulp-header": "^1.8.9",
         "gulp-if": "^2.0.2",
         "gulp-ignore": "^2.0.2",
-        "gulp-imagemin": "^3.3.0",
+        "gulp-imagemin": "^3.4.0",
         "gulp-load-plugins": "^1.5.0",
         "gulp-newer": "^1.3.0",
         "gulp-plumber": "^1.1.0",
@@ -221,7 +221,7 @@
         "gulp-print": "^2.0.1",
         "gulp-rename": "^1.2.2",
         "gulp-replace": "^0.6.1",
-        "gulp-rev": "^8.0.0",
+        "gulp-rev": "^8.1.0",
         "gulp-sass": "^3.1.0",
         "gulp-size": "^2.1.0",
         "gulp-sourcemaps": "^2.6.1",
@@ -236,40 +236,40 @@
         "karma-coverage": "^1.1.1",
         "karma-mocha": "^1.3.0",
         "karma-phantomjs-launcher": "^1.0.2",
-        "karma-phantomjs-shim": "^1.4.0",
-        "karma-sinon-chai": "^1.3.2",
+        "karma-phantomjs-shim": "^1.5.0",
+        "karma-sinon-chai": "^1.3.3",
         "karma-sourcemap-loader": "^0.3.7",
         "karma-spec-reporter": "0.0.31",
-        "karma-webpack": "^2.0.2",
-        "lolex": "^2.1.2",
+        "karma-webpack": "^2.0.5",
+        "lolex": "^2.3.0",
         "lost": "^8.2.0",
         "mocha": "^3.5.3",
-        "moment": "^2.18.1",
+        "moment": "^2.19.1",
         "nib": "^1.1.2",
         "nightwatch": "^0.9.12",
         "opn": "^5.1.0",
         "optimize-css-assets-webpack-plugin": "^3.2.0",
         "ora": "^1.2.0",
-        "phantomjs-prebuilt": "^2.1.15",
+        "phantomjs-prebuilt": "^2.1.16",
         "postcss-brand-colors": "^1.0.0",
         "postcss-cssnext": "^3.0.2",
         "poststylus": "^1.0.0",
         "rimraf": "^2.6.2",
         "rupture": "^0.6.2",
-        "selenium-server": "^3.5.3",
+        "selenium-server": "^3.7.1",
         "semver": "^5.4.1",
         "shelljs": "^0.7.6",
-        "sinon": "^3.2.1",
-        "sinon-chai": "^2.13.0",
+        "sinon": "^3.3.0",
+        "sinon-chai": "^2.14.0",
         "url-loader": "^0.5.8",
-        "vue-loader": "^13.0.4",
+        "vue-loader": "^13.5.0",
         "vue-style-loader": "^3.0.3",
-        "vue-template-compiler": "^2.4.4",
-        "webpack": "^3.6.0",
+        "vue-template-compiler": "^2.5.3",
+        "webpack": "^3.8.1",
         "webpack-bundle-analyzer": "^2.9.0",
         "webpack-dev-middleware": "^1.12.0",
-        "webpack-hot-middleware": "^2.19.1",
-        "webpack-merge": "^4.1.0",
+        "webpack-hot-middleware": "^2.20.0",
+        "webpack-merge": "^4.1.1",
         "webpack-stream": "^4.0.0"
     },
     "scripts": {
