--- a/nginx-config/cityofmarion-staging.conf
+++ b/nginx-config/cityofmarion-staging.conf
@@ -1,47 +1,21 @@
+# Cannonical domain rewrite to remove www., etc. An SSL certificate is required to do the redirect
 server {
     listen 80;
     listen [::]:80;
-    server_name
-        staging.cityofmarion.in.gov
-        www.staging.cityofmarion.in.gov
-      ;
-    return 301 https://staging.cityofmarion.in.gov$request_uri;
-}
-
-# Cannonical domain rewrite to remove www., etc. An SSL certificate is required to do the redirect
-server {
-    # Listen for both IPv4 & IPv6 requests on port 443 with http2 enabled
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
     server_name *.staging.cityofmarion.in.gov;
 
-    # letsencrypt certificates
-    ssl_certificate      /etc/letsencrypt/live/cityofmarion.in.gov/fullchain.pem;
-    ssl_certificate_key  /etc/letsencrypt/live/cityofmarion.in.gov/privkey.pem;
-
-    return 301 https://staging.cityofmarion.in.gov$request_uri;
+    return 301 http://staging.cityofmarion.in.gov$request_uri;
 }
 
 server {
-    # Listen for both IPv4 & IPv6 requests on port 443 with http2 enabled
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 80;
+    listen [::]:80;
 
     # General virtual host settings
     server_name  staging.cityofmarion.in.gov;
 
     #root directory and logfiles
     root /srv/users/serverpilot/apps/cityofmarion-staging/public;
-
-    ssl on;
-
-    # letsencrypt certificates
-    ssl_certificate      /etc/letsencrypt/live/cityofmarion.in.gov/fullchain.pem;
-    ssl_certificate_key  /etc/letsencrypt/live/cityofmarion.in.gov/privkey.pem;
-
-    # verify chain of trust of OCSP response
-    ssl_trusted_certificate /etc/letsencrypt/live/cityofmarion.in.gov/chain.pem;
-
 
     access_log off;
     error_log /srv/users/serverpilot/log/cityofmarion-staging/nginx.error.log error;
