update Craft to RC1

--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,15 @@
         "bower-asset/bugsnag": "^3.3",
         "craftcms/anchors": "^2.0",
         "craftcms/aws-s3": "^1.0",
-        "craftcms/cms": "^3.0.0-beta.23",
+        "craftcms/cms": "^3.0.0-RC1",
         "craftcms/contact-form": "^2.0",
         "craftcms/contact-form-honeypot": "^1.0",
         "craftcms/element-api": "^2.4",
         "craftcms/hexdec": "^2.0",
-        "craftcms/mailgun": "1.0.0.1",
+        "craftcms/mailgun": "1.1.0",
         "craftcms/plugin-installer": "^1.0.0",
         "craftcms/query": "^2.0",
+        "craftcms/redactor": "1.0.0",
         "craftcms/simple-text": "^2.0",
         "craftcms/store-hours": "^2.0",
         "dolphiq/titleentriesfield": "^1.0",
