updating server limits

--- a/web/.user.ini
+++ b/web/.user.ini
@@ -1,5 +1,7 @@
 # set upload size limits here, and in general.php
 upload_max_filesize = 100M
-post_max_size = 100M
+post_max_size = 1G
 # Prevent user session logout trouble
 session.auto_start = 0
+memory_limit = -1
+max_execution_time = 300
