more sensible php settings

--- a/web/.user.ini
+++ b/web/.user.ini
@@ -1,7 +1,10 @@
 # set upload size limits here, and in general.php
-upload_max_filesize = 512M
-post_max_size = 1G
+upload_max_filesize = 150M
+post_max_size = 150M
 # Prevent user session logout trouble
 session.auto_start = 0
-memory_limit = 256M
-max_execution_time = 1800
+memory_limit = 1024M
+max_execution_time = 360
+
+max_input_time = 360
+max_input_vars = 5000
