--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "craftcms/contact-form-honeypot": "^1.0",
         "craftcms/element-api": "^2.4",
         "craftcms/hexdec": "^2.0",
-        "craftcms/mailgun": "1.1.0",
+        "craftcms/mailgun": "^1.0",
         "craftcms/plugin-installer": "^1.0.0",
         "craftcms/query": "^2.0",
         "craftcms/redactor": "1.0.0.1",
