--- a/nginx-config/cityofmarion-staging.conf
+++ b/nginx-config/cityofmarion-staging.conf
@@ -1,3 +1,5 @@
+include /etc/nginx-sp/vhosts.d/redirect-map.conf;
+
 # Cannonical domain rewrite to remove www., etc. An SSL certificate is required to do the redirect
 server {
     listen 80;
@@ -28,6 +30,10 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-SSL on;
     proxy_set_header X-Forwarded-Proto $scheme;
+
+    if ( $redirect_uri ) {
+        return 301 $redirect_uri;
+    }
 
     #includes
     include /etc/nginx-sp/vhosts.d/cityofmarion-staging.d/*.nonssl_conf;
