--- a/nginx-config/cityofmarion-production.conf
+++ b/nginx-config/cityofmarion-production.conf
@@ -1,21 +1,48 @@
-# Cannonical domain rewrite to remove www., etc. An SSL certificate is required to do the redirect
 server {
     listen 80;
     listen [::]:80;
+    server_name
+        cityofmarion.in.gov
+        www.cityofmarion.in.gov
+      ;
+    return 301 https://cityofmarion.in.gov$request_uri;
+}
+
+# Cannonical domain rewrite to remove www., etc. An SSL certificate is required to do the redirect
+server {
+    # Listen for both IPv4 & IPv6 requests on port 443 with http2 enabled
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     server_name *.cityofmarion.in.gov;
 
-    return 301 http://cityofmarion.in.gov$request_uri;
+    # letsencrypt certificates
+    ssl_certificate      /etc/letsencrypt/live/cityofmarion.in.gov/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/cityofmarion.in.gov/privkey.pem;
+
+    return 301 https://cityofmarion.in.gov$request_uri;
 }
 
 server {
-    listen 80;
-    listen [::]:80;
+    # Listen for both IPv4 & IPv6 requests on port 443 with http2 enabled
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
 
     # General virtual host settings
     server_name  cityofmarion.in.gov;
 
     #root directory and logfiles
     root /srv/users/serverpilot/apps/cityofmarion-production/public;
+
+    ssl on;
+
+    # letsencrypt certificates
+    ssl_certificate      /etc/letsencrypt/live/cityofmarion.in.gov/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/cityofmarion.in.gov/privkey.pem;
+
+    # verify chain of trust of OCSP response
+    # ssl_trusted_certificate /etc/nginx-sp/ssl/lets-encrypt-x3-cross-signed.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/cityofmarion.in.gov/chain.pem;
+
 
     access_log off;
     error_log /srv/users/serverpilot/log/cityofmarion-production/nginx.error.log error;
