--- a/nginx-config/cityofmarion-staging/main.custom.conf
+++ b/nginx-config/cityofmarion-staging/main.custom.conf
@@ -21,6 +21,10 @@ location ~ ^/(wp-login|wp-admin|wp-config|wp-content|wp-includes|(.*)\.exe) {
     return 301 https://wordpress.com/wp-login.php;
 }
 
+location ~ ^/.well-known {
+    allow all;
+}
+
 # Handle Do Not Track as per https://www.eff.org/dnt-policy
 location /.well-known/dnt-policy.txt {
     try_files /dnt-policy.txt /index.php?p=/dnt-policy.txt;
