--- a/nginx-config/cityofmarion-production/main.custom.conf
+++ b/nginx-config/cityofmarion-production/main.custom.conf
@@ -6,6 +6,14 @@
 index index.php index.html index.htm;
 charset utf-8;
 
+# Disable limits on the maximum allowed size of the client request body
+client_max_body_size 0;
+
+# Ban certain bots from crawling the site
+if ($limit_bots = 1) {
+    return 403;
+}
+
 # 404 error handler
 error_page 404 /index.php?$query_string;
 
@@ -90,6 +98,12 @@ location ^~ /cpresources {
 
 
 location ~ \.php$ {
+  fastcgi_cache phpcache; # The name of the cache key-zone to use
+  fastcgi_cache_valid 200 30m; # What to cache: 'Code 200' responses, for half an hour
+  fastcgi_cache_methods GET HEAD; # What to cache: only GET and HEAD requests (not POST)
+  add_header X-Fastcgi-Cache $upstream_cache_status; # Add header so we can see if the cache hits or misses
+  
+  
   try_files $uri $uri/ /index.php?$query_string;
   fastcgi_split_path_info ^(.+\.php)(/.+)$;
 
@@ -134,4 +148,3 @@ location ~ /\.ht {
 
 # Misc settings
 sendfile off;
-client_max_body_size 100m;
