--- a/nginx-config/partials/expires.conf
+++ b/nginx-config/partials/expires.conf
@@ -17,7 +17,7 @@ location ~* \.(?:rss|atom)$ {
 }
 
 # Media: images, icons, video, audio, HTC
-location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|webp)$ {
+location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp3|mp4|ogg|ogv|webm|htc|webp)$ {
     etag off;
     expires 1M;
     access_log off;
