disable fastcgi cache for now

--- a/nginx-config/cityofmarion-production/main.custom.conf
+++ b/nginx-config/cityofmarion-production/main.custom.conf
@@ -98,10 +98,10 @@ location ^~ /cpresources {
 
 
 location ~ \.php$ {
-  fastcgi_cache phpcache; # The name of the cache key-zone to use
-  fastcgi_cache_valid 200 30m; # What to cache: 'Code 200' responses, for half an hour
-  fastcgi_cache_methods GET HEAD; # What to cache: only GET and HEAD requests (not POST)
-  add_header X-Fastcgi-Cache $upstream_cache_status; # Add header so we can see if the cache hits or misses
+  # fastcgi_cache phpcache; # The name of the cache key-zone to use
+  # fastcgi_cache_valid 200 30m; # What to cache: 'Code 200' responses, for half an hour
+  # fastcgi_cache_methods GET HEAD; # What to cache: only GET and HEAD requests (not POST)
+  # add_header X-Fastcgi-Cache $upstream_cache_status; # Add header so we can see if the cache hits or misses
   
   
   try_files $uri $uri/ /index.php?$query_string;
