--- a/nginx-config/cityofmarion-production.conf
+++ b/nginx-config/cityofmarion-production.conf
@@ -1,5 +1,5 @@
-fastcgi_cache_path /etc/nginx-cache levels=1:2 keys_zone=phpcache:100m inactive=60m;
-fastcgi_cache_key "$scheme$request_method$host$request_uri";
+# fastcgi_cache_path /etc/nginx-cache levels=1:2 keys_zone=phpcache:100m inactive=60m;
+# fastcgi_cache_key "$scheme$request_method$host$request_uri";
 
 # Bots to ban via user agent
 map $http_user_agent $limit_bots {
