--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,10 @@
         "craftcms/mailgun": "^1.0",
         "craftcms/plugin-installer": "^1.0.0",
         "craftcms/query": "^2.0",
-        "craftcms/redactor": "1.0.0.1",
+        "craftcms/redactor": "^1.0",
         "craftcms/simple-text": "^2.0",
         "craftcms/store-hours": "^2.0",
-        "dolphiq/sitemap": "v1.0.5",
+        "dolphiq/sitemap": "^1.0",
         "dolphiq/titleentriesfield": "^1.0",
         "dukt/facebook": "~2.0",
         "dukt/social": "~2.0",
@@ -48,7 +48,7 @@
         "mblode/svgplaceholder": "^1.0",
         "mexitek/phpcolors": "dev-master",
         "mikestecker/craft3-encodeemail": "dev-master",
-        "newism/craft3-fields": "0.0.7",
+        "newism/craft3-fields": "^0.0.7",
         "nystudio107/craft3-cookies": "^1.1",
         "nystudio107/craft3-fastcgicachebust": "^1.0",
         "nystudio107/craft3-imageoptimize": "^1.2",
