more sensible php settings

--- a/web/.user.ini
+++ b/web/.user.ini
@@ -1,10 +1,3 @@
-# set upload size limits here, and in general.php
-upload_max_filesize = 150M
-post_max_size = 150M
-# Prevent user session logout trouble
 session.auto_start = 0
-memory_limit = 1024M
+memory_limit = 1G
 max_execution_time = 360
-
-max_input_time = 360
-max_input_vars = 5000
