--- a/composer.json
+++ b/composer.json
@@ -41,26 +41,27 @@
         "craftcms/store-hours": "^2.0",
         "dolphiq/sitemap": "^1.0",
         "dolphiq/titleentriesfield": "^1.0",
-        "dukt/facebook": "~2.0",
-        "dukt/social": "~2.0",
-        "dukt/twitter": "~2.0",
-        "dukt/videos": "^2.0@beta",
+        "dukt/facebook": "^2.0",
+        "dukt/social": "^2.0",
+        "dukt/twitter": "^2.0",
+        "dukt/videos": "^2.0",
         "mblode/svgplaceholder": "^1.0",
         "mexitek/phpcolors": "dev-master",
         "mikestecker/craft3-encodeemail": "dev-master",
-        "newism/craft3-fields": "^0.0.7",
-        "nystudio107/craft3-cookies": "^1.1",
-        "nystudio107/craft3-fastcgicachebust": "^1.0",
-        "nystudio107/craft3-imageoptimize": "^1.2",
-        "nystudio107/craft3-minify": "^1.2",
-        "nystudio107/craft3-pathtools": "^1.0",
-        "nystudio107/craft3-typogrify": "^1.0",
+        "newism/craft3-fields": "^0.0.8",
+        "nystudio107/craft-imageoptimize": "^1.0",
+        "nystudio107/craft-cookies": "^1.1",
+        "nystudio107/craft-fastcgicachebust": "^1.0",
+        "nystudio107/craft-minify": "^1.2",
+        "nystudio107/craft-pathtools": "^1.0",
+        "nystudio107/craft-typogrify": "^1.0",
         "rias/craft-position-fieldtype": "^1.0",
         "roave/security-advisories": "dev-master",
         "selvinortiz/patrol": "^3.0",
         "verbb/cp-nav": "^2.0",
         "verbb/expanded-singles": "^1.0",
-        "vlucas/phpdotenv": "^2.4.0"
+        "vlucas/phpdotenv": "^2.4.0",
+        "wbrowar/guide": "^1.1"
     },
     "require-dev": {
         "heroku/heroku-buildpack-php": "^83.0"
