--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
         "ext-mcrypt": "^7.0",
         "aelvan/inlin": "^2.0",
         "aelvan/stamp": "^2.0",
+        "barrelstrength/sprout-encode-email": "v2.0",
+        "barrelstrength/sprout-fields": "^3.0",
         "craftcms/anchors": "^2.0",
         "craftcms/aws-s3": "^1.0",
         "craftcms/cms": "^3.0.0-RC1",
@@ -47,16 +49,16 @@
         "dukt/videos": "^2.0",
         "mblode/svgplaceholder": "^1.0",
         "mexitek/phpcolors": "dev-master",
+        "mikestecker/craft-videoembedder": "^1.0",
         "mikestecker/craft3-encodeemail": "dev-master",
-        "newism/craft3-fields": "^0.0.8",
-        "nystudio107/craft-imageoptimize": "^1.0",
+        "newism/craft3-fields": "^0.0.10",
         "nystudio107/craft-cookies": "^1.1",
         "nystudio107/craft-fastcgicachebust": "^1.0",
+        "nystudio107/craft-imageoptimize": "^1.0",
         "nystudio107/craft-minify": "^1.2",
         "nystudio107/craft-pathtools": "^1.0",
         "nystudio107/craft-typogrify": "^1.0",
         "rias/craft-position-fieldtype": "^1.0",
-        "roave/security-advisories": "dev-master",
         "selvinortiz/patrol": "^3.0",
         "verbb/cp-nav": "^2.0",
         "verbb/expanded-singles": "^1.0",
