--- a/package.json
+++ b/package.json
@@ -144,7 +144,7 @@
         "gulp-newer": "^1.4.0",
         "gulp-plumber": "^1.2.0",
         "gulp-postcss": "^7.0.1",
-        "gulp-print": "^5.0.0",
+        "gulp-print": "hoschi/gulp-print#feature/rollup",
         "gulp-rename": "^1.2.2",
         "gulp-replace": "^0.6.1",
         "gulp-rev": "^8.1.1",
