--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "dukt/facebook": "^2.0",
         "dukt/social": "^2.0",
         "dukt/twitter": "^2.0",
+        "dukt/videos": "^2.0@beta",
         "mblode/svgplaceholder": "^1.0",
         "mexitek/phpcolors": "dev-master",
         "mikestecker/craft-readability": "^1.0",
