--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "barrelstrength/sprout-forms": "^3.0@beta",
         "craftcms/anchors": "^2.0",
         "craftcms/aws-s3": "^1.0",
-        "craftcms/cms": "^3.0.0-RC1",
+        "craftcms/cms": "^3.0.0",
         "craftcms/contact-form": "^2.0",
         "craftcms/contact-form-honeypot": "^1.0",
         "craftcms/element-api": "^2.4",
@@ -58,6 +58,7 @@
         "nystudio107/craft-typogrify": "^1.0",
         "rias/craft-position-fieldtype": "^1.0",
         "selvinortiz/patrol": "^3.0",
+        "solspace/craft3-freeform": "^2.0@beta",
         "superbig/craft-audit": "^1.0",
         "verbb/cp-nav": "^2.0",
         "verbb/expanded-singles": "^1.0",
