--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "nystudio107/craft-pathtools": "^1.0",
         "nystudio107/craft-seomatic": "^3.0@beta",
         "nystudio107/craft-typogrify": "^1.0",
+        "rias/craft-password-policy": "^1.0",
         "rias/craft-position-fieldtype": "^1.0",
         "selvinortiz/patrol": "^3.0",
         "solspace/craft3-freeform": "^2.0@beta",
