--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,11 @@
         "verbb/expanded-singles": "^1.0",
         "vlucas/phpdotenv": "^2.4.0"
     },
+    "autoload": {
+      "psr-4": {
+        "modules\\sitemodule\\": "modules/sitemodule/src/"
+      }
+    },
     "config": {
         "optimize-autoloader": true,
         "sort-packages": true
