added instructions fieldtype

--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
         "rias/craft-password-policy": "^1.0",
         "rias/craft-position-fieldtype": "^1.0",
         "selvinortiz/patrol": "^3.0",
+        "superbig/craft-entry-instructions": "^1.0",
         "supercool/tablemaker": "^2.0",
         "verbb/cp-nav": "^2.0",
         "verbb/expanded-singles": "^1.0",
