--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,13 @@
     "minimum-stability": "beta",
     "require": {
         "aelvan/craft-cp-element-count": "^1.0",
+        "aelvan/imager": "v2.0.1.1",
         "aelvan/inlin": "^2.0",
         "aelvan/stamp": "^2.0",
         "barrelstrength/sprout-encode-email": "^2.0",
         "barrelstrength/sprout-fields": "^3.0",
         "barrelstrength/sprout-forms": "^3.0@beta",
+        "barrelstrength/sprout-forms-us-states": "^1.0",
         "craftcms/anchors": "^2.0",
         "craftcms/aws-s3": "^1.0",
         "craftcms/cms": "^3.0.0",
