added more redirects #161

--- a/nginx-config/partials/redirects.conf
+++ b/nginx-config/partials/redirects.conf
@@ -21,3 +21,83 @@ location = /properties {
 location = /brand {
     return 301 https://s3.us-east-2.amazonaws.com/marion-prod/downloads/attachments/marketing-community-relations/More-than-a-Brand.pdf;
 }
+
+location = /acc {
+    return 301 /government/departments/animal-care-control;
+}
+
+location = /building {
+    return 301 /government/departments/building-department;
+}
+
+location = /clerk {
+    return 301 /government/departments/city-clerk-court;
+}
+
+location = /court {
+    return 301 /government/departments/city-clerk-court;
+}
+
+location = /grounds {
+    return 301 /government/departments/city-hall;
+}
+
+location = /planning {
+    return 301 /government/departments/city-planning;
+}
+
+location = /maintenance {
+    return 301 /government/departments/citywide-maintenance;
+}
+
+location = /ce {
+    return 301 /government/departments/code-enforcement;
+}
+
+location = /neighborhoods {
+    return 301 /government/departments/community-development-marketing/neighborhood-associations;
+}
+
+location = /cd {
+    return 301 /government/departments/community-development-marketing;
+}
+
+location = /marketing {
+    return 301 /government/departments/community-development-marketing/marketing-community-relations;
+}
+
+location = /controller {
+    return 301 /government/departments/controller;
+}
+
+location = /ed {
+    return 301 /government/departments/economic-development;
+}
+
+location = /engineering {
+    return 301 /government/departments/engineering-traffic;
+}
+
+location = /hr {
+    return 301 /government/departments/human-resources;
+}
+
+location = /it {
+    return 301 /government/departments/information-technology;
+}
+
+location = /mayor {
+    return 301 /government/departments/mayor;
+}
+
+location = /parks {
+    return 301 /government/departments/parks-recreation;
+}
+
+location = /police {
+    return 301 /government/departments/police;
+}
+
+location = /transportation {
+    return 301 /government/departments/transportation;
+}
