round 3 of redirects for #161

--- a/nginx-config/partials/redirects.conf
+++ b/nginx-config/partials/redirects.conf
@@ -101,3 +101,71 @@ location = /police {
 location = /transportation {
     return 301 /government/departments/transportation;
 }
+
+location = /atc {
+    return 301 /government/boards/alcohol-tobacco-commission;
+}
+
+location = /boardofaviation {
+    return 301 /government/boards/board-of-aviation;
+}
+
+location = /boardofhealth {
+    return 301 /government/boards/board-of-health;
+}
+
+location = /bow {
+    return 301 /government/boards/board-of-works;
+}
+
+location = /bza {
+    return 301 /government/boards/board-of-zoning-appeals;
+}
+
+location = /plancommission {
+    return 301 /government/boards/planning-commission;
+}
+
+location = /commoncouncil {
+    return 301 /government/boards/common-council;
+}
+
+location = crvcommission {
+    return 301 /government/boards/convention-recreation-visitors-commission;
+}
+
+location = /creedboard {
+    return 301 /government/boards/creed-board;
+}
+
+location = /edcommission {
+    return 301 /government/boards/economic-development-commission;
+}
+
+location = /housingauthority {
+    return 301 /government/boards/housing-authority;
+}
+
+location = /parkboard {
+    return 301 /government/boards/parks-recreation-board;
+}
+
+location = /libraryboard {
+    return 301 /government/boards/public-library-board;
+}
+
+location = /mrc {
+    return 301 /government/boards/redevelopment-commission;
+}
+
+location = /traffic {
+    return 301 /government/boards/traffic-commission;
+}
+
+location = /utilityboard {
+    return 301 /government/boards/utility-service-board;
+}
+
+location = /sidewalks {
+    return 301 /government/departments/engineering-traffic/50-50-sidewalk-program;
+}
