More redirects for #161

--- a/nginx-config/partials/redirects.conf
+++ b/nginx-config/partials/redirects.conf
@@ -169,3 +169,11 @@ location = /utilityboard {
 location = /sidewalks {
     return 301 /government/departments/engineering-traffic/50-50-sidewalk-program;
 }
+
+location = /pet {
+    return 301 /government/departments/animal-care-control;
+}
+
+location = /bus {
+    return 301 /government/departments/transportation;
+}
