added new redirects #161

--- a/nginx-config/partials/redirects.conf
+++ b/nginx-config/partials/redirects.conf
@@ -177,3 +177,23 @@ location = /pet {
 location = /bus {
     return 301 /government/departments/transportation;
 }
+
+location = /stories {
+    return 301 /news-events/type/story;
+}
+
+location = /champions {
+    return 301 /news-events/type/story/champions;
+}
+
+location = /employeespotlight {
+    return 301 /news-events/type/story/employee-spotlight;
+}
+
+location = /businessspotlight {
+    return 301 /news-events/type/story/business-spotlight;
+}
+
+location = /dogdateafternoon {
+    return 301 /news-events/type/story/dogdateafternoon;
+}
