--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "barrelstrength/sprout-forms-us-states": "^1.0",
         "craftcms/anchors": "^2.0",
         "craftcms/aws-s3": "^1.0",
-        "craftcms/cms": "^3.0.0",
+        "craftcms/cms": "~3.0.0",
         "craftcms/contact-form": "^2.0",
         "craftcms/contact-form-honeypot": "^1.0",
         "craftcms/element-api": "^2.4",
@@ -51,7 +51,7 @@
         "mikestecker/craft-readability": "^1.0",
         "mikestecker/craft-videoembedder": "^1.0",
         "mmikkel/retcon": "v2.x-dev",
-        "newism/craft3-fields": "^0.0.10",
+        "newism/craft3-fields": "^0.0.11",
         "nystudio107/craft-cookies": "^1.1",
         "nystudio107/craft-fastcgicachebust": "^1.0",
         "nystudio107/craft-imageoptimize": "^1.0",
