Initial search implementation
 #163

--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,7 @@
         "selvinortiz/patrol": "^3.0",
         "superbig/craft-entry-instructions": "^1.0",
         "supercool/tablemaker": "^2.0",
+        "topshelfcraft/wordsmith": "^3.0",
         "verbb/cp-nav": "^2.0",
         "verbb/expanded-singles": "^1.0",
         "vlucas/phpdotenv": "^2.4.0"
