starting support for events

--- a/composer.json
+++ b/composer.json
@@ -39,11 +39,11 @@
         "craftcms/plugin-installer": "^1.0.0",
         "craftcms/query": "^2.0",
         "craftcms/redactor": "^2.0",
-        "craftcms/simple-text": "^2.0",
+        "craftcms/simple-text": "^2.0.0",
         "craftcms/store-hours": "^2.0",
         "dolphiq/titleentriesfield": "^1.0",
-        "dukt/facebook": "^2.0",
-        "dukt/twitter": "^2.0",
+        "dukt/facebook": "^2.0.0",
+        "dukt/twitter": "^2.0.0",
         "lukeyouell/craft-readtime": "^1.1",
         "lukeyouell/craft-updatechecker": "^1.1",
         "mblode/svgplaceholder": "^1.0",
@@ -54,6 +54,7 @@
         "newism/craft3-fields": "^0.0.14",
         "nystudio107/craft-cookies": "^1.1",
         "nystudio107/craft-fastcgicachebust": "^1.0",
+        "nystudio107/craft-icalendar": "^1.0",
         "nystudio107/craft-imageoptimize": "^1.0",
         "nystudio107/craft-minify": "^1.2",
         "nystudio107/craft-pathtools": "^1.0",
@@ -65,8 +66,10 @@
         "selvinortiz/patrol": "^3.0",
         "superbig/craft-entry-instructions": "^1.0",
         "superbig/craft-imagerpretransform": "^2.0",
+        "superbig/craft3-calendarlinks": "^1.0",
         "supercool/tablemaker": "^2.0",
         "topshelfcraft/wordsmith": "^3.0",
+        "unionco/calendarize": "^1.2",
         "verbb/cp-nav": "^2.0",
         "verbb/expanded-singles": "^1.0",
         "vlucas/phpdotenv": "^2.4.0"
